# DoorDetector

./: .gitignore  CMakeLists.txt  README.md  TODO
src/: CMakeLists.txt  DoorDetectorConfig.cmake.in
src/Components/: CMakeLists.txt
src/Components/BehaviourSwitch/: BehaviourSwitch.cpp  BehaviourSwitch.hpp  CMakeLists.txt  Order_simple.hpp
src/Components/BoundingRect/: BoundingRect.cpp  BoundingRect.hpp  CMakeLists.txt
src/Components/CvBruteForce/: CvBruteForce.cpp  CvBruteForce.hpp
src/Components/DoorElementsROI/: CMakeLists.txt  DoorElementsROI.cpp  DoorElementsROI.hpp
src/Components/DoorModel/: CMakeLists.txt  DoorModel.cpp  DoorModel.hpp
src/Components/FindDoorCorners/: CMakeLists.txt  FindDoorCorners.cpp  FindDoorCorners.hpp
src/Components/FindHomography/: FindHomography.cpp  FindHomography.hpp
src/Components/HistogramEqualization/: CMakeLists.txt  HistogramEqualization.cpp  HistogramEqualization.hpp
src/Components/ImproveLines/: CMakeLists.txt  ImproveLines.cpp  ImproveLines.hpp
src/Components/QuadModel/: CMakeLists.txt  (+2 more)
src/Types/: CMakeLists.txt
tasks/: Matcher.xml  MatcherUnified.xml  MatcherUnified_model_loader.xml  MatcherUnified_test.xml  calibrate.xml  krawedziowy.xml  krawedziowy_1.xml  krawedziowy_2.xml  matcher_wysylanie.xml  model_loader.xml  model_saver.xml  podwojny_task.xml  poprawajakosci.xml  pozycja.xml  pozycja_proxy.xml  pozycja_wysylane.xml  proxy_test.xml  rozmyty.xml  undistort_irp.xml  virtual_receptor.xml  virtual_receptor_dom.xml  virtual_receptor_dom_robot.xml  virtual_receptor_robot.xml  wysylanie_door_homog_elem.xml
(+23 files in other folders)
